<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="l_budget">Budget</string>
    <string name="l_wk_days">Week Days</string>
    <string name="l_wk_ends">Week Ends</string>
    <string name="calculate">Calculate</string>
    <string name="l_expenses">Expenses</string>
    <string name="l_remaining">Remaining</string>
    <string name="ex_budget">0.00</string>
    <string name="ex_expenses">0.00</string>
    <string name="ex_remaining">0.00</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="edit_budget">EDIT</string>
    <string name="list_budgets">LIST</string>
    <string name="back">BACK</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_lists">ListsActivity</string>
    
    <string name="reset">Reset</string>

</resources>
