<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/l_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/l_budget"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/l_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_budget"
        android:layout_below="@+id/l_budget"
        android:layout_marginTop="23dp"
        android:text="@string/l_expenses"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <requestFocus />


 
    <TextView
        android:id="@+id/ex_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l_expenses"
        android:layout_alignParentRight="true"
        android:text="@string/ex_budget"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="150dp" />

    <TextView
        android:id="@+id/ex_expenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l_expenses"
        android:layout_alignLeft="@+id/ex_budget"
        android:layout_alignRight="@+id/ex_budget"
        android:text="@string/ex_expenses"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ex_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l_remaining"
        android:layout_alignLeft="@+id/ex_expenses"
        android:text="@string/ex_remaining"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_remaining"
        android:layout_alignTop="@+id/tmp"
        android:onClick="calculate"
        android:text="@string/plus" />

    <Button
        android:id="@+id/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tmp"
        android:layout_toRightOf="@+id/tmp"
        android:text="@string/minus" />

    <TextView
        android:id="@+id/ex_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_budget"
        android:layout_alignRight="@+id/ex_budget"
        android:gravity="center"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/edit_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/plus"
        android:layout_below="@+id/plus"
        android:layout_toLeftOf="@+id/ex_remaining"
        android:text="@string/edit_budget" />

    <Button
        android:id="@+id/list_budgets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_budget"
        android:layout_alignBottom="@+id/edit_budget"
        android:layout_alignRight="@+id/minus"
        android:layout_toRightOf="@+id/edit_budget"
        android:text="@string/list_budgets" />

    <TextView
        android:id="@+id/l_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_expenses"
        android:layout_below="@+id/l_budget"
        android:text="@string/l_remaining"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/tmp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l_expenses"
        android:layout_marginTop="17dp"
        android:layout_toRightOf="@+id/plus"
        android:ems="10"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:width="143dp" />

</RelativeLayout>