<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/l_budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="37dp"
        android:text="@string/l_budget"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/l_wk_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_budget"
        android:layout_below="@+id/l_budget"
        android:layout_marginTop="23dp"
        android:text="@string/l_wk_days"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/budget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/l_wk_days"
        android:layout_toRightOf="@+id/l_wk_days"
        android:ems="10"
        android:inputType="numberDecimal" />
		
    	<requestFocus />
    	
    <EditText
        android:id="@+id/wk_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l_wk_days"
        android:layout_alignLeft="@+id/budget"
        android:ems="10"
        android:inputType="numberDecimal" >

        
    </EditText>

    <TextView
        android:id="@+id/l_wk_ends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_wk_days"
        android:layout_below="@+id/l_wk_days"
        android:layout_marginTop="24dp"
        android:text="@string/l_wk_ends"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/wk_ends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/l_wk_ends"
        android:layout_alignLeft="@+id/wk_days"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_wk_ends"
        android:layout_alignRight="@+id/wk_ends"
        android:layout_below="@+id/l_wk_ends"
        android:layout_marginTop="14dp"
        android:text="@string/calculate" 
        android:onClick="calculate"
        />

    <TextView
        android:id="@+id/notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/l_budget"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/budget"
        android:text=""
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/calculate"
        android:layout_alignRight="@+id/calculate"
        android:layout_below="@+id/calculate"
        android:text="@string/reset" />

</RelativeLayout>
